--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="TfGrotesk.otf">
+<link rel="stylesheet" href="TfGroteskItalic.otf">
 </head>
 
 <body>
